--- a/example/package.json
+++ b/example/package.json
@@ -30,15 +30,20 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.20",
     "husky": "^9.1.1",
     "lint-staged": "^15.2.7",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "sass": "^1.77.8",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.5.3",
     "vite": "^5.3.4"
   },
   "lint-staged": {
-    "*.{ts,tsx,json}": ["biome check --apply --no-errors-on-unmatched"],
+    "*.{ts,tsx,json}": [
+      "biome check --apply --no-errors-on-unmatched"
+    ],
     "*.{scss,md,html}": "prettier --write"
   }
 }
