--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "typescript": "^5.6.3",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "zustand": "^5.0.0"
   }
 }
