--- a/example/package.json
+++ b/example/package.json
@@ -22,7 +22,8 @@
     "@goodjpl/styling": "^0.7.0",
     "modern-normalize": "^2.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
